# CPP3_SmartCalc_v2.0

./: README.md
src/: CMakeLists.txt  Makefile  main.cc  struct.h
src/controller/: controller.cc  controller.h
src/docs/: dvi.aux  dvi.tex
src/model/: credit.cc  deposit.cc  model.cc  model.h
src/tests/: test_smartcalc.cc
src/view/: view.cc  view.h  view.ui
